Implement '/v1/wallets/transfer' endpoint (#11)
* Add 'transfer' endpoint tests
* Update OpenAPI
